<resources>
    <string name="app_name">TravelCar</string>
    <string name="action_settings">Settings</string>
    
    <string name="model">Modèle :</string>
    <string name="year">Année :</string>
    <string name="equipment">Équipement :</string>

    <string name="lastname">Nom</string>
    <string name="name">Prénom</string>
    <string name="address">Adresse</string>
    <string name="birthdate">Date de naissance</string>

    <string name="edit">Éditer</string>
    <string name="save">Sauvegarder</string>
</resources>
