<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/AppTheme.PopupOverlay" >

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout
            android:id="@+id/relative_photo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintTop_toBottomOf="@+id/app_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="16dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/photo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerInParent="true"
                app:srcCompat="@drawable/ic_image_black_24dp"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/edit_photo"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                app:srcCompat="@drawable/ic_edit_black_24dp"
                android:visibility="gone"/>

        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/relative_photo"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastname"
                android:enabled="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/lastname"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:enabled="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/name"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:enabled="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/birthdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/address"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_birthdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/birthdate"
                android:enabled="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="16dp">

            <Button
                android:id="@+id/edit"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/edit"
                android:background="@drawable/button"
                android:layout_margin="5dp"
                android:textColor="@color/white"
                android:onClick="edit"/>

            <Button
                android:id="@+id/save"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/save"
                android:background="@drawable/button"
                android:layout_margin="5dp"
                android:textColor="@color/white"
                android:enabled="false"
                android:onClick="save"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>